--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </section>
         <!-- Map-->
         <div class="map" id="contact">
-            <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15785.274751701554!2d-13.245708!3d8.4683585!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x39d81d8ede62e568!2sTpISENT%20(SL)%20Limited!5e0!3m2!1sen!2ssl!4v1631580821312!5m2!1sen!2ssl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             <br />
             <small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a></small>
         </div>
