--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><a href="#page-top">abibatu.me</a></li>
-                <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
-                <li class="sidebar-nav-item"><a href="#about">About</a></li>
+                <li class="sidebar-nav-item"><a href="#page-top">home</a></li>
+                <li class="sidebar-nav-item"><a href="#about">about</a></li>
                 <li class="sidebar-nav-item"><a href="#blog">blog</a></li>
                 <li class="sidebar-nav-item"><a href="#photos">photos</a></li>
-                <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
+                <li class="sidebar-nav-item"><a href="#contact">contact</a></li>
             </ul>
         </nav>
         <!-- Header-->
